# nestle

./: .gitignore  .travis.yml  CHANGES.md  api.html  devdocs.html  genindex.html  index.html  nestle.py  objects.inv  prior.html  py-modindex.html  pyproject.toml  runtests.py  search.html  searchindex.js  sg_execution_times.html  stopping.html
_downloads/57568c09faf502a189d519f938b8f80b/: plot_ellipsoids.ipynb
_downloads/64aed1d4b4e020d2ee9ffb607074fead/: plot_eggbox.ipynb
_downloads/7d4fa4950d56618c6cb9175ea5d947f5/: plot_shells.ipynb
_downloads/929f6f316d7184a85f39a725885eb341/: plot_line.ipynb
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/examples/: index.rst.txt  plot_eggbox.rst.txt  plot_ellipsoids.rst.txt  plot_line.rst.txt  plot_shells.rst.txt  sg_execution_times.rst.txt
docs/: conf.py  deploy.sh  prior.rst
examples/: index.html  plot_eggbox.html  plot_ellipsoids.html  plot_line.html  plot_shells.html  sg_execution_times.html
